adicionei a minha parte

--- a/relatorio-latex/bibliografia/biblio.bib
+++ b/relatorio-latex/bibliografia/biblio.bib
@@ -170,3 +170,10 @@
   year = {2021}
 }
 
+%% Ana - novas referencias adicionadas 
+@misc{ref37,
+  author       = {IEEE Computer Society},
+  title        = {Guide to the Software Engineering Body of Knowledge (SWEBOK Guide), Version 4.0},
+  year         = {2024},
+  note         = {Recuperado em 19 de outubro de 2025, de \url{https://www.computer.org/education/bodies-of-knowledge/software-engineering}}
+}
