--- a/relatorio-latex/relatorio.tex
+++ b/relatorio-latex/relatorio.tex
@@ -66,6 +66,10 @@
 
 % CAPITULOS
 
+\include{capitulos/01_introducao}
+
+\include{capitulos/02_principios_de_avaliacao_da_seguranca_web}
+
 \include{capitulos/05_vulnerabilidades_testadas_nao_detetadas}
 
 \include{capitulos/06_questoes_conhecidas_reportadas_nivel_lataforma}
