fix relatorio - adicionar o package URL

--- a/relatorio-latex/relatorio.tex
+++ b/relatorio-latex/relatorio.tex
@@ -30,6 +30,7 @@
 \usepackage{pdfpages} % incluir ficheiros PDF - para a capa
 \usepackage{indentfirst} % identar a primeira linha
 \usepackage[nottoc,numbib]{tocbibind} % referencias aparecerem no indice
+\usepackage{url}
 
 \usepackage{geometry}
 \geometry{margin=2.5cm} % diminuir a margem
