capitulos 3.3 e 3.4 (aparecem como 3.1 e 3.2 porque o verdadeiro 3.1 e 3.2 ainda não foi adicionado)

--- a/relatorio-latex/bibliografia/biblio.bib
+++ b/relatorio-latex/bibliografia/biblio.bib
@@ -177,3 +177,95 @@
   year         = {2024},
   note         = {Recuperado em 19 de outubro de 2025, de \url{https://www.computer.org/education/bodies-of-knowledge/software-engineering}}
 }
+
+%% Jéssica - novas referencias adicionadas
+@misc{ref38,
+  author       = {Nguyen, T. K. and Hwang, S. O.},
+  title        = {Large-scale detection of DOM-based XSS based on publisher and subscriber model},
+  year         = {2016},
+  note         = {In 2016 International Conference on Computational Science and Computational Intelligence (CSCI) (pp. 975-980). IEEE. Recuperado de \url{https://doi.org/10.1109/CSCI.2016.0187}}
+}
+
+@misc{ref39,
+  author       = {Melicher, W. and Das, A. and Sharif, M. and Bauer, L. and Jia, L.},
+  title        = {Riding out DOMsday: Towards detecting and preventing DOM cross-site scripting},
+  year         = {2018},
+  note         = {In Proceedings of the 2018 Network and Distributed System Security Symposium (NDSS). Internet Society.}
+}
+
+@misc{ref40,
+  author       = {Wang, P. and Gu{\dh}mundsson, B. {\'A}. and Kotowicz, K.},
+  title        = {Adopting Trusted Types in production web frameworks to prevent DOM-based cross-site scripting: A case study},
+  year         = {2021},
+  note         = {In 2021 IEEE European Symposium on Security and Privacy Workshops (EuroSPW) (pp. 60--73). IEEE. Recuperado de \url{https://doi.org/10.1109/EuroSPW54576.2021.00013}}
+}
+
+@misc{ref41,
+  author       = {Kalantari, Faezeh and Zaeifi, Mehrnoosh and Bao, Tiffany and Wang, Ruoyu and Shoshitaishvili, Yan and Doupé, Adam},
+  title        = {Context-Auditor: Context-sensitive Content Injection Mitigation},
+  year         = {2022},
+  note         = {In Proceedings of the 25th International Symposium on Research in Attacks, Intrusions and Defenses (RAID '22). Association for Computing Machinery, New York, NY, USA, 431-445. Recuperado de \url{https://doi.org/10.1145/3545948.3545992}}
+}
+
+@misc{ref42,
+  author       = {Melicher, William and Fung, Clement and Bauer, Lujo and Jia, Limin},
+  title        = {Towards a Lightweight, Hybrid Approach for Detecting DOM XSS Vulnerabilities with Machine Learning},
+  year         = {2021},
+  note         = {In Proceedings of the Web Conference 2021 (WWW '21). Association for Computing Machinery, New York, NY, USA, 2684-2695. Recuperado de \url{https://doi.org/10.1145/3442381.3450062}}
+}
+
+@misc{ref43,
+  author       = {Khodayari, S. and Glauber, K. and Pellegrino, G.},
+  title        = {Do (Not) Follow the White Rabbit: Challenging the Myth of Harmless Open Redirection},
+  year         = {2025},
+  note         = {In Proceedings of the Network and Distributed System Security Symposium (NDSS). Internet Society.}
+}
+
+@misc{ref44,
+  author       = {WNE Security},
+  title        = {How hackers exploit open redirects to bypass security filters},
+  year         = {2025},
+  note         = {Recuperado em 18 de outubro de 2025, de \url{https://wnesecurity.com/how-hackers-exploit-open-redirects-to-bypass-security-filters/}}
+}
+
+@misc{ref45,
+  author       = {Microsoft},
+  title        = {Prevent open redirect attacks in ASP.NET Core},
+  year         = {2025},
+  note         = {Microsoft Learn. Recuperado em 18 de outubro de 2025, de \url{https://learn.microsoft.com/en-us/aspnet/core/security/preventing-open-redirects?view=aspnetcore-9.0}}
+}
+
+@misc{ref46,
+  author       = {IEEE Computer Society},
+  title        = {Guide to the Software Engineering Body of Knowledge (SWEBOK Guide), Version 4.0},
+  year         = {2024},
+  note         = {Recuperado em 19 de outubro de 2025, de \url{https://www.computer.org/education/bodies-of-knowledge/software-engineering}}
+}
+
+@misc{ref47,
+  author       = {Banu, S. and Deepthi, S.},
+  title        = {Detecting, Analyzing, and Evaluation of Vulnerabilities Using Metasploitable},
+  year         = {2023},
+  note         = {Springer.}
+}
+
+@misc{ref48,
+  author       = {Ponta, S. E. and others},
+  title        = {Detection, assessment and mitigation of vulnerabilities in open source dependencies},
+  year         = {2020},
+  note         = {Springer.}
+}
+
+@misc{ref49,
+  author       = {Sindhwad, S. and others},
+  title        = {VulnArmor: mitigating software vulnerabilities with code resolution and detection techniques},
+  year         = {2024},
+  note         = {Springer.}
+}
+
+@misc{ref50,
+  author       = {Nath, V.},
+  title        = {Vulnerability Assessment Methods - A Review},
+  year         = {2011},
+  note         = {Springer.}
+}
