--- a/relatorio-latex/relatorio.tex
+++ b/relatorio-latex/relatorio.tex
@@ -24,7 +24,8 @@
 %%
 %% PACOTES
 %%
-
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[portuguese]{babel}
 \usepackage{pdfpages} % incluir ficheiros PDF - para a capa
@@ -71,6 +72,8 @@
 
 \include{capitulos/02_principios_de_avaliacao_da_seguranca_web}
 
+\include{capitulos/03_Vulnerabilidades_detetadas_no_projeto}
+
 \include{capitulos/05_vulnerabilidades_testadas_nao_detetadas}
 
 \include{capitulos/06_questoes_conhecidas_reportadas_nivel_lataforma}
@@ -78,7 +81,7 @@
 % BIBLIOGRAFIA
 
 \bibliography{bibliografia/biblio}{}
-\bibliographystyle{apalike}
+\bibliographystyle{IEEEtran}
 
 %%
 %% FIM DO DOCUMENTO
