3rd chapter added

--- a/relatorio-latex/relatorio.tex
+++ b/relatorio-latex/relatorio.tex
@@ -71,6 +71,8 @@
 
 \include{capitulos/02_principios_de_avaliacao_da_seguranca_web}
 
+\include{capitulos/03_vulnerabilidades_detetadas_no_projeto}
+
 \include{capitulos/05_vulnerabilidades_testadas_nao_detetadas}
 
 \include{capitulos/06_questoes_conhecidas_reportadas_nivel_lataforma}
