--- a/relatorio-latex/bibliografia/biblio.bib
+++ b/relatorio-latex/bibliografia/biblio.bib
@@ -1,173 +1,233 @@
 @misc{ref1,
   author = {OWASP Foundation},
   title = {OWASP Web Security Testing Guide (WSTG) v4.2},
-  year = {2023}
+  year = {2023},
+  url = {https://owasp.org/www-project-web-security-testing-guide/},
+  note = {Accessed: 2024-10-05}
 }
 
 @misc{ref2,
   author = {OWASP Foundation},
   title = {OWASP Top 10: 2021},
-  year = {2021}
+  year = {2021},
+  url = {https://owasp.org/www-project-top-ten/},
+  note = {Accessed: 2024-10-05}
 }
 
 @misc{ref3,
   author = {NIST},
   title = {SP 800-53 Rev. 5: Security and Privacy Controls for Information Systems and Organizations},
-  year = {2020}
+  year = {2020},
+  url = {https://csrc.nist.gov/publications/detail/sp/800-53/rev-5/final},
+  publisher = {National Institute of Standards and Technology},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref4,
   author = {NIST},
   title = {SP 800-218: Secure Software Development Framework (SSDF)},
-  year = {2022}
+  year = {2022},
+  url = {https://csrc.nist.gov/publications/detail/sp/800-218/final},
+  publisher = {National Institute of Standards and Technology},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref5,
   author = {IETF},
   title = {RFC 6454: The Web Origin Concept},
-  year = {2011}
+  year = {2011},
+  url = {https://tools.ietf.org/html/rfc6454},
+  publisher = {Internet Engineering Task Force},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref6,
   author = {OWASP},
   title = {CORS Misconfiguration Cheat Sheet},
-  year = {2023}
+  year = {2023},
+  url = {https://owasp.org/www-project-cors-misconfiguration-cheat-sheet/},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref7,
   author = {MDN Web Docs},
   title = {HTTP Access-Control-Allow-Origin Header},
   year = {2024},
-  publisher = {Mozilla}
+  publisher = {Mozilla},
+  url = {https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Access-Control-Allow-Origin},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref8,
   author = {OWASP},
   title = {WSTG-CLNT-07: Testing Service Workers, in Web Security Testing Guide v4.2},
-  year = {2023}
+  year = {2023},
+  url = {https://owasp.org/www-project-web-security-testing-guide/},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref9,
   author = {Google Developers},
   title = {Service Workers: an Introduction},
-  year = {2023}
+  year = {2023},
+  url = {https://developers.google.com/web/fundamentals/primers/service-workers},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref10,
   author = {OWASP},
   title = {Dependency-Check Project Documentation},
-  year = {2023}
+  year = {2023},
+  url = {https://owasp.org/www-project-dependency-check/},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref11,
   author = {GitHub Security Lab},
   title = {GitHub Advisory Database},
-  year = {2024}
+  year = {2024},
+  url = {https://github.com/advisories},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref12,
   author = {OWASP},
   title = {Secrets Management Cheat Sheet},
-  year = {2023}
+  year = {2023},
+  url = {https://cheatsheetseries.owasp.org/cheatsheets/Secrets_Management_Cheat_Sheet.html},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref13,
   author = {NIST},
   title = {SP 800-57: Recommendation for Key Management},
-  year = {2021}
+  year = {2021},
+  url = {https://csrc.nist.gov/pubs/sp/800/57/pt1/r5/final},
+  publisher = {National Institute of Standards and Technology},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref14,
   author = {GitGuardian},
-  title = {Detecting Hardcoded Secrets in Frontend Code},
+  title = {How to detect secrets in source code?},
   year = {2024},
-  note = {Technical Blog}
+  note = {Technical Blog Accessed: 2024-10-20},
+  url = {https://www.gitguardian.com/glossary/how-to-detect-secrets-in-source-code}
 }
 
 @misc{ref15,
   author = {Microsoft},
-  title = {Best Practices for Storing and Managing API Keys},
-  year = {2023}
+  title = {Best practices for protecting secrets},
+  year = {2024},
+  url = {https://learn.microsoft.com/en-us/azure/security/fundamentals/secrets-best-practices},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref16,
-  author = {Base44 Documentation},
-  title = {Platform Deployment and Hosting Overview},
-  year = {2024}
+  author = {Base44},
+  title = {Base44 Documentation},
+  year = {2024},
+  url = {https://docs.base44.com/},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref17,
   author = {Cloudflare},
   title = {What Is Edge Computing?},
   year = {2024},
-  note = {Cloudflare Learning Center}
+  url = {https://www.cloudflare.com/learning/serverless/glossary/what-is-edge-computing/},
+  note = {Cloudflare Learning Center, Accessed: 2024-10-20}
 }
 
 @misc{ref18,
   author = {NIST},
   title = {SP 800-190: Application Container Security Guide},
-  year = {2017}
+  year = {2017},
+  url = {https://csrc.nist.gov/publications/detail/sp/800-190/final},
+  publisher = {National Institute of Standards and Technology},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref19,
   author = {OWASP Foundation},
   title = {OWASP Secure Headers Project},
-  year = {2023}
+  year = {2023},
+  url = {https://owasp.org/www-project-secure-headers/},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref20,
   author = {PortSwigger},
   title = {Exposed Source Maps Security Advisory},
-  year = {2023}
+  year = {2023},
+  url = {https://portswigger.net/research},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref21,
   author = {OWASP},
   title = {A05:2021 - Security Misconfiguration, OWASP Top 10: 2021},
-  year = {2021}
+  year = {2021},
+  url = {https://owasp.org/www-project-top-ten/},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref22,
   author = {Base44 Community Forum},
   title = {Security and Source Map Exposure Threads},
-  year = {2024}
+  year = {2024},
+  url = {https://forum.base44.com/threads/security-and-source-map-exposure/},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref23,
-  author = {OWASP},
+  author = {Checkmarx},
   title = {Zed Attack Proxy (ZAP) User Guide},
-  year = {2023}
+  year = {2023},
+  url = {https://www.zaproxy.org/docs/desktop/},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref24,
   author = {Mozilla Developer Network},
   title = {HTTP Security Headers Reference},
-  year = {2024}
+  year = {2024},
+  url = {https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers},
+  publisher = {Mozilla},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref25,
   author = {OWASP Cheat Sheets Series},
   title = {Content Security Policy (CSP)},
-  year = {2023}
+  year = {2023},
+  url = {https://owasp.org/www-project-cheat-sheets/},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref26,
   author = {Akamai Technologies},
   title = {CDN Caching and Invalidation Strategies},
-  year = {2023}
+  year = {2023},
+  url = {https://techdocs.akamai.com/purge-cache/docs/cache-strategies},
+  note = {Accessed: 2024-10-20}
 }
 
 @misc{ref27,
-  author = {Cloudflare},
-  title = {Understanding CDN Cache Propagation Delays},
+  author = {APIPark},
+  title = {Understanding Cloudflare DNS Propagation Time and Its Impact on API Performance for a Better User Experience},
   year = {2024},
-  note = {Technical Note}
+  url = {https://apipark.com/technews/QGslvOeL.html},
+  note = {Technical Note, Accessed: 2024-10-20}
 }
 
 @misc{ref28,
   author = {NIST},
   title = {SP 800-61 Rev. 2: Computer Security Incident Handling Guide},
-  year = {2021}
+  year = {2021},
+  url = {https://csrc.nist.gov/publications/detail/sp/800-61/rev-2/final},
+  publisher = {National Institute of Standards and Technology},
+  note = {Accessed: 2024-10-20}
 }
 
 %% Ana - novas referencias adicionadas 
