alterar o nome do indice e adicionar metadados

--- a/relatorio-latex/relatorio.tex
+++ b/relatorio-latex/relatorio.tex
@@ -40,8 +40,15 @@
 %% METADADOS
 %%
 
-\title{Relatorio }
-\author{Grupo}
+\title{Análise e Reforço de Segurança em Aplicações No-Code com IA: Estudo de Caso Base44}
+\author{
+Ana Carolina Vieira (106568) \and
+Ekaterina Popkova (134454) \and
+Jéssica Vieira (110812) \and
+Pedro da Silva (106584) \and
+Vasco Conde (133746)
+}
+
 \date{\today}
 
 %%
@@ -59,7 +66,7 @@
 \include{capitulos/00_resumo}
 
 %% INDICES
-
+\renewcommand{\contentsname}{Índice}
 \tableofcontents
 
 %\listoftables
