--- a/relatorio-latex/capitulos/00_resumo.tex
+++ b/relatorio-latex/capitulos/00_resumo.tex
@@ -1,12 +1,12 @@
 
 \begin{abstract}
-O presente trabalho tem como objetivo analisar vulnerabilidades de segurança em aplicações desenvolvidas com a plataforma Base44, uma solução no-code baseada em inteligência artificial. A investigação centra-se no código do lado do cliente (frontend), procurando avaliar os riscos que podem existir mesmo sem acesso ao backend da aplicação.
+O presente trabalho tem como objetivo analisar vulnerabilidades de segurança em aplicações desenvolvidas com a plataforma Base44, uma solução \textit{no-code} baseada em inteligência artificial. A investigação centra-se no código do lado do cliente (\textit{frontend}), procurando avaliar os riscos que podem existir mesmo sem acesso ao \textit{backend} da aplicação.
 
 A análise será conduzida segundo uma abordagem de testes de penetração do tipo caixa-cinzenta, adequada a contextos onde o acesso à infraestrutura é limitado. O estudo incidirá sobre falhas detetáveis através do navegador, como o armazenamento inseguro de dados, a manipulação inadequada do DOM e a exposição de recursos sensíveis. 
 
-Com este projeto, pretende-se contribuir para uma maior consciência dos riscos inerentes ao desenvolvimento em plataformas no-code, sublinhando a importância da segurança mesmo em ambientes onde o controlo técnico do programador é reduzido.
+Com este projeto, pretende-se contribuir para uma maior consciência dos riscos inerentes ao desenvolvimento em plataformas \textit{no-code}, sublinhando a importância da segurança mesmo em ambientes onde o controlo técnico do programador é reduzido.
 
+\vspace{5mm}
 
-
-\textbf{Keywords}: Segurança Web, Base44, Frontend, Cross-Site Scripting (XSS), LocalStorage, Service Worker.
+\textbf{Keywords}: Segurança Web, Base44, \textit{Frontend}, \textit{Cross-Site Scripting} (XSS), \textit{Local Storage}, \textit{Service Worker}.
 \end{abstract}
