--- a/relatorio-latex/relatorio.tex
+++ b/relatorio-latex/relatorio.tex
@@ -88,6 +88,9 @@ Vasco Conde (133746)
 
 \include{capitulos/06_questoes_conhecidas_reportadas_nivel_lataforma}
 
+\include{capitulos/07_conclusao}
+
+
 %% BIBLIOGRAFIA
 
 \bibliography{bibliografia/biblio}{}
