--- a/relatorio-latex/bibliografia/biblio.bib
+++ b/relatorio-latex/bibliografia/biblio.bib
@@ -413,3 +413,24 @@
   howpublished = {\url{https://datatracker.ietf.org/doc/html/rfc6797}},
   note         = {[Online]}
 }
+
+  @INPROCEEDINGS{ref53,
+  author={Jayasuryapal, G and Pranay, P. Meher and Kaur, Harpreet and Swati},
+  booktitle={2021 2nd International Conference on Intelligent Engineering and Management (ICIEM)}, 
+  title={A Survey on Network Penetration Testing}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={373-378},
+  doi={10.1109/ICIEM51511.2021.9445321}
+  }
+
+@techreport{ref54,
+  author       = {Jessica Ji and Jenny Jun and Maggie Wu and Rebecca Gelles},
+  title        = {Cybersecurity Risks of AI-Generated Code},
+  institution  = {Center for Security and Emerging Technology},
+  year         = {2024},
+  month        = nov,
+  url          = {https://doi.org/10.51593/2023CA010}
+}
+
