--- a/relatorio-latex/capitulos/01_introducao.tex
+++ b/relatorio-latex/capitulos/01_introducao.tex
@@ -2,7 +2,7 @@
 
 \subsection{Enquadramento e Propósito do Estudo}
 
-O uso crescente de plataformas \textit{no-code}, como a Base44, veio simplificar o desenvolvimento de aplicações web, mas também trouxe novos desafios em termos de segurança. Estas soluções permitem que utilizadores construam aplicações funcionais sem qualquer contacto com o servidor ou com o código do \textit{backend}, o que reduz significativamente as possibilidades de análise e reforço da segurança.
+O uso crescente de plataformas \textit{no-code}, como a Base44 (\url{https://base44.com}), veio simplificar o desenvolvimento de aplicações web, mas também trouxe novos desafios em termos de segurança \cite{ref54}. Estas soluções permitem que utilizadores construam aplicações funcionais sem qualquer contacto com o servidor ou com o código do \textit{backend}, o que reduz significativamente as possibilidades de análise e reforço da segurança.
 
 Este estudo tem como objetivo analisar e avaliar vulnerabilidades existentes ao nível do \textit{frontend} de uma aplicação desenvolvida na Base44. Procura-se demonstrar que, mesmo com acesso apenas ao código do lado do cliente (\textit{HTML}, \textit{CSS} e \textit{JavaScript}), é possível identificar riscos que podem comprometer a integridade, a confidencialidade e a disponibilidade da aplicação.
 
