--- a/relatorio-latex/capitulos/02_principios_de_avaliacao_da_seguranca_web.tex
+++ b/relatorio-latex/capitulos/02_principios_de_avaliacao_da_seguranca_web.tex
@@ -4,7 +4,7 @@
 
 A avaliação da segurança em aplicações web recorre, frequentemente, a testes de penetração (\textit{pentesting}). Estes testes consistem na simulação controlada de ataques informáticos, com o objetivo de identificar vulnerabilidades que possam ser exploradas por atacantes. É uma prática fundamental em cibersegurança, pois permite analisar a capacidade de resistência de uma aplicação perante ameaças reais, sem comprometer o seu funcionamento.
 
-Consoante o grau de acesso à aplicação, os testes de penetração podem ser classificados em três modelos principais:
+Consoante o grau de acesso à aplicação, os testes de penetração podem ser classificados em três modelos principais \cite{ref53}:
 
 \begin{flushleft}
 \textbullet\ \textbf{Testes de Caixa-Preta (\textit{Black-box}):} Aqui o avaliador não tem qualquer informação interna sobre a aplicação, aproximando-se da perspetiva de um atacante externo. A análise é feita exclusivamente através da interação com a aplicação em execução, sem qualquer acesso ao código-fonte ou à documentação da arquitetura.
