ultimas alteracoes antes da entrega

--- a/relatorio-latex/bibliografia/biblio.bib
+++ b/relatorio-latex/bibliografia/biblio.bib
@@ -91,7 +91,7 @@
 }
 
 @misc{ref12,
-  author = {OWASP},
+  author = {OWASP Foundation},
   title = {Secrets Management Cheat Sheet},
   year = {2023},
   url = {https://cheatsheetseries.owasp.org/cheatsheets/Secrets_Management_Cheat_Sheet.html},
@@ -161,14 +161,6 @@
   title = {Exposed Source Maps Security Advisory},
   year = {2023},
   url = {https://portswigger.net/research},
-  note = {Accessed: 2024-10-20}
-}
-
-@misc{ref21,
-  author = {OWASP},
-  title = {A05:2021 - Security Misconfiguration, OWASP Top 10: 2021},
-  year = {2021},
-  url = {https://owasp.org/www-project-top-ten/},
   note = {Accessed: 2024-10-20}
 }
 
