--- a/relatorio-latex/capitulos/01_introducao.tex
+++ b/relatorio-latex/capitulos/01_introducao.tex
@@ -8,6 +8,8 @@ Este estudo tem como objetivo analisar e avaliar vulnerabilidades existentes ao 
 
 O trabalho assume um carácter exploratório e prático, focando-se na reprodução de falhas reais e na implementação de soluções corretivas. O principal objetivo é contribuir para a consciencialização e para o reforço da segurança em ambientes \textit{no-code}, onde o controlo técnico por parte dos programadores é limitado, mas onde os riscos continuam a ser relevantes.
 
+Todo o trabalho desenvolvido, incluindo este relatório em formato \LaTeX\;e os ficheiros do estudo prático (ainda por desenvolver), encontra-se disponível num repositório Git alojado no GitHub no seguinte endereço: \url{https://github.com/acavieira/SRSI}. O acesso ao repositório permite a consulta integral dos conteúdos, promovendo a transparência e facilitando a reprodução dos testes realizados.
+
 \subsection{Estrutura do Trabalho}
 
 Após esta introdução, o relatório está organizado de forma lógica e progressiva, acompanhando o desenvolvimento do projeto desde os seus fundamentos teóricos até à análise prática dos resultados.
