--- a/relatorio-latex/capitulos/02_principios_de_avaliacao_da_seguranca_web.tex
+++ b/relatorio-latex/capitulos/02_principios_de_avaliacao_da_seguranca_web.tex
@@ -67,7 +67,7 @@ pois varrimentos agressivos podem ser interpretados como atividade intrusiva.
 
 é um \textit{scanner} de servidores web orientado para a identificação de configurações incorretas,
 ficheiros e \textit{endpoints} públicos potencialmente perigosos,
-e componentes desatualizados com vulnerabilidades conhecidas \cite{ref21}.
+e componentes desatualizados com vulnerabilidades conhecidas \cite{ref2}.
 Embora não tenha a sofisticação de \textit{scanners} comerciais,
 é valioso para detetar rapidamente questões de configuração e itens de segurança negligenciados
 que podem ser explorados em conjunção com outras falhas.
@@ -114,7 +114,7 @@ e configurar cabeçalhos de segurança \cite{ref19} no nível do servidor.
 Ferramentas e técnicas que requerem interações com o \textit{backend},
 como \textit{sqlmap} (injeção \textit{SQL}), \textit{nikto} (\textit{scanner web} dinâmico)
 ou \textit{nmap} (varrimentos de rede), foram consideradas, mas não serão utilizadas,
-pois excedem o escopo do projeto e não são compatíveis com a política de ética e segurança definida.
+pois excedem o âmbito do projeto e não são compatíveis com a política de ética e segurança definida.
 
 Assim sendo, a abordagem selecionada permite avaliar de forma responsável e ética
 a superfície de ataque do \textit{frontend} das aplicações Base44,
