--- a/relatorio-latex/glossario/glossario.tex
+++ b/relatorio-latex/glossario/glossario.tex
@@ -10,6 +10,7 @@
 \item[DOM] \textit{Document Object Model}
 \item[HTML] \textit{HyperText Markup Language}
 \item[HSTS] \textit{HTTP Strict Transport Security}
+\item[IA] Inteligência Artificial
 \item[OAuth] \textit{Open Authorization}
 \item[OWASP] \textit{Open Web Application Security Project}
 \item[PTES] \textit{Penetration Testing Execution Standard}
