adicao da seccao pratica - seccoes e exemplo reverse-tabnabbing

--- a/relatorio-latex/relatorio.tex
+++ b/relatorio-latex/relatorio.tex
@@ -88,7 +88,9 @@ Vasco Conde (133746)
 
 \include{capitulos/06_questoes_conhecidas_reportadas_nivel_lataforma}
 
-\include{capitulos/07_conclusao}
+\include{capitulos/07_implementacao_correcoes_vulnerabilidades}
+
+\include{capitulos/08_conclusao}
 
 
 %% BIBLIOGRAFIA
