--- a/relatorio-latex/capitulos/02_principios_de_avaliacao_da_seguranca_web.tex
+++ b/relatorio-latex/capitulos/02_principios_de_avaliacao_da_seguranca_web.tex
@@ -2,7 +2,7 @@
 
 \subsection{Tipos de Testes de Penetração}
 
-A avaliação da segurança em aplicações web recorre, frequentemente, a testes de penetração (\textit{pentesting}). Estes testes consistem na simulação controlada de ataques informáticos, com o objetivo de identificar vulnerabilidades que possam ser exploradas por atacantes. É uma prática fundamental em cibersegurança, pois permite analisar a capacidade de resistência de uma aplicação perante ameaças reais, sem comprometer o seu funcionamento.
+A avaliação da segurança em aplicações web recorre, frequentemente, a testes de penetração (\textit{pentesting}). Estes testes consistem na simulação controlada de ataques informáticos, com o objetivo de identificar vulnerabilidades que possam ser exploradas por atacantes. É uma prática fundamental em cibersegurança que permite analisar a capacidade de resistência de uma aplicação perante ameaças reais, sem comprometer o seu funcionamento.
 
 Consoante o grau de acesso à aplicação, os testes de penetração podem ser classificados em três modelos principais \cite{ref53}:
 
