fixed subsection/subsubsection confusion in 6.2 pg 32

--- a/relatorio-latex/capitulos/07_parte_pratica_PASTA/reverse_tabnabbing_PASTA/evidencia_reverse_tabnabbing.tex
+++ b/relatorio-latex/capitulos/07_parte_pratica_PASTA/reverse_tabnabbing_PASTA/evidencia_reverse_tabnabbing.tex
@@ -1,5 +1,5 @@
 
-\paragraph{Correção das Ligações Externas Inseguras (Reverse Tabnabbing)}
+\subsubsection{Correção das Ligações Externas Inseguras (Reverse Tabnabbing)}
 
 Para demonstrar a mitigação da vulnerabilidade, foi executada uma Prova de Conceito (PoC) simulando um cenário de ataque, antes e depois da mitigação, onde a página externa força o redirecionamento da aplicação original para um site arbitrário (neste exemplo, \url{https://www.google.com}).
 
