--- a/relatorio-latex/capitulos/07_parte_pratica_PASTA/source_tabs_disabling_PASTA/evidencia_source_tabs_disabling.tex
+++ b/relatorio-latex/capitulos/07_parte_pratica_PASTA/source_tabs_disabling_PASTA/evidencia_source_tabs_disabling.tex
@@ -1,3 +1,5 @@
+\subsubsection{Desativação dos Source Maps em Produção}
+
 \paragraph{Validação das Correções}
 
 \noindent\textbf{Cenário Vulnerável (Antes da Correção)}
